<resources>
    <string name="app_name">Meet Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="start">Start</string>
    <string name="say_hii">Say Hii!</string>
    <string name="people_with_common_interest">People with common interest</string>
    <string name="you_will_get_an_otp">You will get an otp</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number_to_continue">Enter Mobile Number to Continue</string>
    <string name="preference_file_name">Shared Preference</string>
    <string name="choose_your_favorite">Choose Your Favorite</string>
    <string name="ashutosh_kkumar">Ashutosh KKumar</string>
    <string name="we_have_sent_a_6_digit_otp_to">We have Sent a 6 digit Otp to</string>
    <string name="register_yourself">Register YourSelf</string>
    <string name="name">Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="football">FOOTBALL</string>
    <string name="todo">TODO</string>
    <string name="cricketdetail">Cricket is a bat-and-ball game played between two teams of eleven players on a field at the centre of which is a 22-yard
        (20-metre) pitch with a wicket at each end, each comprising two bails balanced on three stumps. The batting side scores runs by striking the ball bowled at the wicket with the bat (and running between the wickets), while the bowling and fielding side tries to prevent this (by preventing the ball from leaving the field, and getting the ball to either wicket) and dismiss each batter (so they are "out"). Means of dismissal include being bowled, when the ball hits the stumps and dislodges the bails, and by the fielding side either catching the ball after it is hit by the bat and before it hits the ground, or hitting a wicket with the ball before a batter can cross the crease in front of the wicket. When ten batters have been dismissed, the innings ends and the teams swap roles.
        The game is adjudicated by two umpires, aided by a third umpire and match referee in international matches.</string>
    <string name="footballdetail">Football is a family of team sports that involve, to varying degrees, kicking a ball to score a goal. Unqualified, the word football normally means the form of football that is the most popular where the word is used. Sports commonly called football include association football (known as soccer in some countries); gridiron football (specifically American football or Canadian football); Australian rules football; rugby football (either rugby union or rugby league); and Gaelic football.[1] These various forms of football share to varying extent common origins and are known as football codes.
There are a number of references to traditional, ancient, or prehistoric ball games played in many different parts of the world.[2][3][4] Contemporary codes of football can be traced back to the codification of these games at English public schools during the 19th century.[5][6] The expansion and cultural influence of the British Empire allowed these rules of football to spread to areas of British influence outside the directly controlled Empire.[7] By the end of the 19th century, distinct regional codes were already developing: Gaelic football, for example, deliberately incorporated the rules of local traditional football games in order to maintain their heritage.[8] In 1888, The Football League was founded in England, becoming the first of many professional football competitions.
         During the 20th century, several of the various kinds of football grew to become some of the most popular team sports in the world.[9]</string>
    <string name="narendra_modi">Narendra Damodardas Modi (/nəˈreɪndrə ˈdɑːmoʊdərdɑːs ˈmoʊdi/ (About this soundlisten) nə-RAIN-drə DAH-moh-dər-dahss MO-dee ; born 17 September 1950)[a] is an Indian politician serving as the 14th and current prime minister of India since 2014. He was the chief minister of Gujarat from 2001 to 2014 and is the member of Parliament for Varanasi. Modi is a member of the Bharatiya Janata Party (BJP) and its National Democratic Alliance (NDA). He is also a member of the Rashtriya Swayamsevak Sangh (RSS), a Hindu nationalist volunteer organisation. He is the first prime minister born after Indias independence, the second non-Congress one to win two consecutive terms after Atal Bihari Vajpayee and the first from outside the Congress to win both terms with a majority in the Lok Sabha.</string>
    <string name="rahul_gandhi">Rahul Gandhi (About this soundpronunciation (help·info) [ˈraːɦʊl ˈɡaːn̪d̪ʱi]) (born 19 June 1970) is an Indian politician and a member of the Indian Parliament, representing the constituency of Wayanad, Kerala in the 17th Lok Sabha. A member of the Indian National Congress, he served as the President of the Indian National Congress from 16 December 2017 to 3 July 2019. Gandhi is the chairperson of the Indian Youth Congress and the National Students Union of India. He is also a trustee of Rajiv Gandhi Foundation and Rajiv Gandhi Charitable Trust.</string>
    <string name="obama">Barack Hussein Obama II (/bəˈrɑːk huːˈseɪn oʊˈbɑːmə/ (About this soundlisten) bə-RAHK hoo-SAYN oh-BAH-mə;[1] born August 4, 1961) is an American politician and attorney who served as the 44th president of the United States from 2009 to 2017. A member of the Democratic Party, Obama was the first African-American president of the United States. He previously served as a U.S. senator from Illinois from 2005 to 2008 and as an Illinois state senator from 1997 to 2004.
Obama was born in Honolulu, Hawaii. After graduating from Columbia University in 1983, he worked as a community organizer in Chicago. In 1988, he enrolled in Harvard Law School, where he was the first black president of the Harvard Law Review. After graduating, he became a civil rights attorney and an academic, teaching constitutional law at the University of Chicago Law School from 1992 to 2004. Turning to elective politics, he represented the 13th district in the Illinois Senate from 1997 until 2004, when he ran for the U.S. Senate. Obama received national attention in 2004 with his March Senate primary win, his well-received July Democratic National Convention keynote address, and his landslide November election to the Senate. In 2008, he was nominated by the Democratic Party for president a year after beginning his campaign, and after a close primary campaign against Hillary Clinton. Obama was elected over Republican nominee John McCain in the general election and was inaugurated alongside his running mate, Joe Biden, on January 20, 2009. Nine months later, he was named the 2009 Nobel Peace Prize laureate.</string>
    <string name="bjp">The Bharatiya Janata Party (pronounced [bʱaːrtiːjə dʒənta paːrʈi] (About this soundlisten); transl. Indian Peoples Party; abbr. BJP) is one of two major political parties in India, along with the Indian National Congress.[36] It is the current ruling political party of the Republic of India, having been so since 2014.[37] The BJP is a right-wing party, and its policy has historically reflected Hindu nationalist positions.[38][39] It has close ideological and organisational links to the much older Rashtriya Swayamsevak Sangh (RSS).[40] As of 2019, it is the countrys largest political party in terms of representation in the national parliament and state assemblies and is by far the worlds largest party in terms of primary membership, with the second largest party, the Chinese Communist Party, having about half the registered members of the BJP.</string>
    <string name="inc">The Indian National Congress, (often called the Congress Party or simply Congress, abbr. INC) is a political party in India with widespread roots.[16] Founded in 1885, it was the first modern nationalist movement to emerge in the British Empire in Asia and Africa.[a][17] From the late 19th century, and especially after 1920, under the leadership of Mahatma Gandhi, Congress became the principal leader of the Indian independence movement.[18] Congress led India to independence from the United Kingdom,[b][19][c][20] and powerfully influenced other anti-colonial nationalist movements in the British Empire[d][17], making it one of the worlds oldest active political parties.</string>
    <string name="jobs">Steven Paul Jobs (/dʒɒbz/; February 24, 1955 – October 5, 2011) was an American business magnate, industrial designer, investor, and media proprietor. He was the chairman, chief executive officer (CEO), and co-founder of Apple Inc.; the chairman and majority shareholder of Pixar; a member of The Walt Disney Companys board of directors following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely recognized as a pioneer of the personal computer revolution of the 1970s and 1980s, along with his early business partner and fellow Apple co-founder Steve Wozniak</string>
    <string name="musk">Elon Reeve Musk FRS (/ˈiːlɒn/ EE-lon; born June 28, 1971) is an entrepreneur and business magnate. He is the founder, CEO and chief engineer at SpaceX; early stage investor,[note 1] CEO, and product architect of Tesla, Inc.; founder of The Boring Company; and co-founder of Neuralink and OpenAI. A centibillionaire, Musk is one of the richest people in the world.
Musk was born to a Canadian mother and South African father and raised in Pretoria, South Africa. He briefly attended the University of Pretoria before moving to Canada aged 17 to attend Queens University. He transferred to the University of Pennsylvania two years later, where he received bachelors degrees in economics and physics. He moved to California in 1995 to attend Stanford University but decided instead to pursue a business career, co-founding the web software company Zip2 with his brother Kimbal. The startup was acquired by Compaq for $307 million in 1999. Musk co-founded online bank X.com that same year, which merged with Confinity in 2000 to form PayPal. The company was bought by eBay in 2002 for $1.5 billion</string>
    <string name="premji">Azim Hashim Premji (born 24 July 1945) is an Indian business tycoon, investor, engineer, and philanthropist, who was the chairman of Wipro Limited. Premji remains a non-executive member of the board and founder chairman.[5] He is informally known as the Czar of the Indian IT Industry.[6][7] He was responsible for guiding Wipro through four decades of diversification and growth, to finally emerge as one of the global leaders in the software industry.[8][9] In 2010, he was voted among the 20 most powerful men in the world by Asiaweek.[10] He has twice been listed among the 100 most influential people by TIME Magazine, once in 2004 and more recently in 2011.[11] For years, he has been regularly listed one among the 500 Most Influential Muslims of the world.</string>
</resources>