<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txtEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/enter_mobile_number_to_continue"
            android:textColor="#000000"
            android:textSize="17sp" />


        <LinearLayout
            android:id="@id/LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnter"
            android:layout_marginTop="15dp"
            android:weightSum="5.0">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="+91"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etMobileNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="3.3"
                android:hint="@string/mobile_number"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_otp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/LL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Next"
            android:background="@drawable/button"
            />
        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL"/>

        <TextView
            android:id="@+id/txtGetOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_get_otp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/you_will_get_an_otp" />
    </RelativeLayout>

</RelativeLayout>